k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-rust-test-postgres
  namespace: ${K8S_NAMESPACE}
  labels:
    app: hermes-rust-test-postgres
spec:
  type: ClusterIP
  selector:
    app: hermes-rust-test-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
