k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP_NAME}
  namespace: ${K8S_NAMESPACE}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${DOMAIN}`)
      services:
        - name: ${APP_NAME}
          port: 8080
  tls:
    secretName: steedgrace-com-tls-secret
